# SimplePlayer

./: .gitignore  CMakeLists.txt  README.md  audio_decode.h  gen_project.bat  main.c  video_decode.h
